--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,8 @@ dependencies = [
     "matplotlib>=3.10.3",
     "numpy>=2.3.2",
     "opencv-python>=4.11.0.86",
+    "pandas>=2.3.1",
+    "scikit-learn>=1.7.1",
+    "seaborn>=0.13.2",
     "vpython>=7.6.5",
 ]
